--- a/Unity.Burst.CodeGen.csproj
+++ b/Unity.Burst.CodeGen.csproj
@@ -19,7 +19,7 @@
     <RootNamespace></RootNamespace>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>PackageToolsEditor</AssemblyName>
+    <AssemblyName>Unity.Burst.CodeGen</AssemblyName>
     <TargetFramework>netstandard2.1</TargetFramework>
     <BaseDirectory>.</BaseDirectory>
   </PropertyGroup>
@@ -32,7 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169;USG0001</NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,7 +41,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169;USG0001</NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <NoStandardLibraries>true</NoStandardLibraries>
@@ -54,7 +54,7 @@
     <UnityProjectGenerator>Package</UnityProjectGenerator>
     <UnityProjectGeneratorVersion>2.0.22</UnityProjectGeneratorVersion>
     <UnityProjectGeneratorStyle>SDK</UnityProjectGeneratorStyle>
-    <UnityProjectType>Editor:5</UnityProjectType>
+    <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2022.3.36f1</UnityVersion>
   </PropertyGroup>
@@ -63,12 +63,20 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.36f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EnumFlagDrawer.cs" />
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EditorGUIx.cs" />
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EditorBase.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\CecilExtensions.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\BurstILPostProcessor.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\AssemblyResolver.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\FunctionPointerInvokeTransform.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\ILPostProcessing.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\GenericContext.cs" />
+    <Compile Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\ILPostProcessingLegacy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\AstarPathfindingProject\PackageTools\Editor\PackageToolsEditor.asmdef" />
+    <None Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll" />
+    <None Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll" />
+    <None Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll" />
+    <None Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.CodeGen.asmdef" />
+    <None Include="Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -419,192 +427,24 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.36f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Nethereum.RPC">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.RPC.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.YamlDotNet">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Mud.Contracts">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Mud.Contracts.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Geth">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Geth.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Optimism">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Optimism.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.BlockchainProcessing">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.BlockchainProcessing.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Collections.LowLevel.ILSupport">
-      <HintPath>Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Model">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Model.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Signer">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Signer.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Siwe.Core">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Siwe.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.4.4\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Plastic.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.4.4\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="ADRaffy.ENSNormalize">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\ADRaffy.ENSNormalize.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Merkle.Patricia">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Merkle.Patricia.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.JsonRpc.RpcClient">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.JsonRpc.RpcClient.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.RLP">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.RLP.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="BouncyCastle.Crypto">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\BouncyCastle.Crypto.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.HdWallet">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.HdWallet.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Plastic.Newtonsoft.Json">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.4.4\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.EVM">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.EVM.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Web3">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Web3.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.UI">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Metamask">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Metamask.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="log4netPlastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.4.4\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Unity">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Unity.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.IonicZip">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Hex">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Hex.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.JsonRpc.Client">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.JsonRpc.Client.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Accounts">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Accounts.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Unity.Metamask">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Unity.Metamask.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Besu">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Besu.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Util">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Util.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Merkle">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Merkle.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Signer.EIP712">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Signer.EIP712.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.GnosisSafe">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.GnosisSafe.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.TextureAssets">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Mud">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Mud.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Siwe">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Siwe.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Util.Rest">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Util.Rest.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="NBitcoin">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\NBitcoin.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.KeyStore">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.KeyStore.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.Contracts">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.Contracts.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Pathfinding.Ionic.Zip.Reduced">
-      <HintPath>Assets\AstarPathfindingProject\Plugins\DotNetZip\Pathfinding.Ionic.Zip.Reduced.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Nethereum.ABI">
-      <HintPath>Library\PackageCache\com.nethereum.unity@365953edce\Runtime\Nethereum.ABI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Rocks">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Pdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Mdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.16\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="mscorlib">
@@ -1107,13 +947,13 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.36f1\Editor\Data\UnityReferenceAssemblies\unity-4.8-api\Facades\System.Xml.XPath.XDocument.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.CompilationPipeline.Common">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.36f1\Editor\Data\Managed\Unity.CompilationPipeline.Common.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="AstarPathfindingProject.csproj" />
-    <ProjectReference Include="UnityEditor.UI.csproj" />
-    <ProjectReference Include="UnityEngine.UI.csproj" />
-    <ProjectReference Include="UnityEditor.TestRunner.csproj" />
-    <ProjectReference Include="UnityEngine.TestRunner.csproj" />
+    <ProjectReference Include="Unity.Burst.csproj" />
   </ItemGroup>
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
