--- a/Unity.Searcher.Editor.csproj
+++ b/Unity.Searcher.Editor.csproj
@@ -19,7 +19,7 @@
     <RootNamespace></RootNamespace>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>PackageToolsEditor</AssemblyName>
+    <AssemblyName>Unity.Searcher.Editor</AssemblyName>
     <TargetFramework>netstandard2.1</TargetFramework>
     <BaseDirectory>.</BaseDirectory>
   </PropertyGroup>
@@ -63,12 +63,22 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.36f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EnumFlagDrawer.cs" />
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EditorGUIx.cs" />
-    <Compile Include="Assets\AstarPathfindingProject\PackageTools\Editor\EditorBase.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherHighlighter.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherDatabaseBase.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherAdapter.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherWindow.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\AssemblyInfo.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherDatabase.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\Searcher.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherItem.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherControl.cs" />
+    <Compile Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Searcher\SearcherTreeUtility.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\AstarPathfindingProject\PackageTools\Editor\PackageToolsEditor.asmdef" />
+    <None Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Unity.Searcher.Editor.asmdef" />
+    <None Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Resources\SearcherItem.uxml" />
+    <None Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Resources\SearcherWindow.uxml" />
+    <None Include="Library\PackageCache\com.unity.searcher@4.9.2\Editor\Resources\Searcher.uss" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -1109,7 +1119,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="AstarPathfindingProject.csproj" />
     <ProjectReference Include="UnityEditor.UI.csproj" />
     <ProjectReference Include="UnityEngine.UI.csproj" />
     <ProjectReference Include="UnityEditor.TestRunner.csproj" />
